--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "webpack-es6",
-    "version": "0.0.0",
-    "description": "webpack-es6 test",
-    "main": "index.js",
-    "scripts": {
-        "pack": "webpack --progress --colors --watch --dev",
-        "start": "webpack-dev-server --hot --inline --port=8961 --progress --colors --dev"
-    },
-    "author": "jicemoon",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.18.2",
-        "babel-loader": "^6.2.7",
-        "babel-preset-es2015": "^6.18.0",
-        "webpack-hot-middleware": "^2.13.1"
-    }
+  "name": "webpack-es6",
+  "version": "0.0.0",
+  "description": "webpack-es6 test",
+  "main": "index.js",
+  "scripts": {
+    "pack": "webpack --progress --colors --watch --dev",
+    "start": "webpack-dev-server --hot --inline --port=8961 --progress --colors --dev"
+  },
+  "author": "jicemoon",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.1"
+  }
 }
