--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,31 @@
     // For further information visit https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [{
-            "name": "Launch Program",
+            "name": "Async-test",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}\\node-run\\Async-test.js",
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "sourceMaps": true
+        }, {
+            "name": "Generator-test",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}\\node-run\\Generator-test.js",
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "sourceMaps": true
+        }, {
+            "name": "Iterator-test",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}\\node-run\\Iterator-test.js",
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "sourceMaps": true
+        }, {
+            "name": "Promise-test",
             "type": "node",
             "request": "launch",
             "program": "${workspaceRoot}\\node-run\\Promise-test.js",
