--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "webpack-es6",
-    "version": "0.0.0",
-    "description": "webpack-es6 test",
-    "main": "index.js",
-    "scripts": {
-        "i": "npm ln webpack&npm install",
-        "pack": "webpack --progress --colors --watch --dev",
-        "start": "webpack-dev-server --devtool eval --progress --colors --hot --inline --port=8961"
-    },
-    "author": "jicemoon",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.18.2",
-        "babel-loader": "^6.2.7",
-        "babel-preset-es2015": "^6.18.0",
-        "webpack": "^1.13.3",
-        "webpack-dev-middleware": "^1.8.4",
-        "webpack-dev-server": "^1.16.2",
-        "webpack-hot-middleware": "^2.13.1"
-    }
+  "name": "webpack-es6",
+  "version": "0.0.0",
+  "description": "webpack-es6 test",
+  "main": "index.js",
+  "scripts": {
+    "i": "npm ln webpack&npm install",
+    "pack": "webpack --progress --colors --watch --dev",
+    "start": "webpack-dev-server --devtool eval --progress --colors --hot --inline --port=8961"
+  },
+  "author": "jicemoon",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "co": "^4.6.0",
+    "thunkify": "^2.1.2",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.1"
+  }
 }
